--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -15,6 +15,7 @@ body{
     background-size: cover;
     background-position: 80%;
     background-attachment: fixed;
+
 }
 header {
     padding: 10px 15px 20px 25px;
@@ -73,13 +74,22 @@ header nav ul li a{
     color: rgb(123,223,242);
 }
 
-.flex-row{
-    display: inline;
+.white-font{
+    color: whitesmoke;
+}
+
+.flex-row {
+    display: -webkit-inline-box;
     padding: 50px;
 }
 
 .section-name{
     padding: 50px;
+    border-right: solid 3px;
+}
+
+.section-project{
+    padding: 470px 50px;
     border-right: solid 3px;
 }
 
@@ -96,6 +106,26 @@ header nav ul li a{
 .projects {
     border-bottom: 1px solid;
     padding-bottom: 100px;
+}
+
+#introduction h2{
+    padding-right: 100px;
+    padding-top: 100px;
+}
+
+#picture{
+    background-image: url(../images/profilepic.jpg);
+    width: 50%;
+    height: 300px;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    border: solid 3px;
+}
+
+#picture:hover{
+    width: 70%;
+    height: 400px;
 }
 
 #content{
@@ -164,6 +194,7 @@ header nav ul li a{
     display: inline-block;
     padding: 5px 100px;
     font-size: 1vw;
+    color: whitesmoke;
 }
 
 .contacts h1 {
