--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -320,9 +320,156 @@ header nav ul li a{
 }
 
 @media screen and (max-width: 768px){
+    header {
+        padding: 10px 24px 20px 25px;
+        justify-content: space-between;
+        display: flex;
+    }
+    
+    #picture {
+        background-image: url(../images/profilepic.jpg);
+        width: 30%;
+        height: 130px;
+        background-size: cover;
+        background-repeat: no-repeat;
+        background-position: center;
+        border: solid 2px;
+    }
 
+    #introduction h2 {
+        padding-right: 15px;
+        padding-top: 60px;
+        padding-left: 0px;
+        font-size: 1.8vw;
+        flex-wrap: wrap;
+    }
+
+    .contacts nav a {
+        display: inline-block;
+        padding: 5px 40px;
+        font-size: 1.5vw;
+        color: whitesmoke;
+        margin-right: auto;
+    }
 }
 
 @media screen and (max-width: 575px) {
-    
+    .hero {
+    padding: 50px;
+}
+
+header a {
+    font-weight: bold;
+    font-size: 3vw;
+    color: whitesmoke;
+    margin: 0;
+    font-style: italic;
+}
+
+header nav ul li a {
+    padding: 10px 15px;
+    font-weight: lighter;
+    font-size: 2.4vw;
+}
+
+#introduction h2 {
+    padding-right: 15px;
+    padding-top: 0px;
+    padding-left: 0px;
+    padding-bottom: 20px;
+    font-size: 2.9vw;
+    flex-wrap: wrap;
+}
+
+.flex-row {
+    display: -webkit-inline-box;
+    padding: 50px;
+    padding-left: 10px;
+    display: inline-block;
+}
+
+.hero-cta h2 {
+    font-style: italic;
+    font-size: 8vw;  
+}
+
+.section-name {
+    padding: 90px 20px;
+    padding-right: 20px;
+    border-right: solid 3px;
+}
+
+#picture {
+    background-image: url(../images/profilepic.jpg);
+    width: 100%;
+    height: 200px;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    border: solid 1px;
+}
+
+#calculator {
+    background-image: url(../images/calculator.png);
+    width: 90%;
+    height: 200px;
+    background-position: center;
+    margin: 10px;
+    background-size: cover;
+    background-repeat: no-repeat;
+    color: whitesmoke;
+}
+
+#atm {
+    background-image: url(../images/bank2.jpg);
+    width: 90%;
+    height: 200px;
+    background-position: center;
+    margin: 10px;
+    background-size: cover;
+    background-repeat: no-repeat;
+    color: black;
+}
+
+#password {
+    background-image: url(../images/Strong-Password-Generator.webp);
+    width: 90%;
+    height: 200px;
+    background-position: center;
+    margin: 10px;
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+
+#runbuddy {
+    background-image: url(../images/runbuddy.jpg);
+    width: 150%;
+    height: 200px;
+    background-position: center;
+    margin: 10px;
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+
+.section-project {
+    padding: 400px 25px;
+    border-right: solid 3px;
+}
+
+.white-font {
+    color: whitesmoke;
+    font-size: 3vw;
+}
+
+.contacts nav a {
+    display: inline-block;
+    padding: 5px 40px;
+    font-size: 3.5vw;
+    color: whitesmoke;
+    margin-right: auto;
+}
+#picture:hover{
+    width: 100%;
+    height: 200px;
+}
 }
