--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -148,7 +148,7 @@ header nav ul li a{
 }
 
 #calculator {
-    background-image: url(../images/calculator.png);
+    background-image: url(../images/latest-pitch.png);
     width: 45%;
     height: 380px;
     background-position: center;
