adding project Moat

--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -421,7 +421,7 @@ header nav ul li a {
 }
 
 #atm {
-    background-image: url(../images/bank2.jpg);
+    background-image: url(../images/logo-picture.png);
     width: 90%;
     height: 200px;
     background-position: center;
